# Curiosity-Diffuser

./: README.md  pyproject.toml  requirements.txt
cleandiffuser/classifier/: __init__.py  rew_classifiers.py  rnd_classifier.py
cleandiffuser/dataset/: aloha_stack_dataset.py  d4rl_antmaze_dataset.py  d4rl_mujoco_dataset.py
cleandiffuser/utils/: utils.py
configs/adaptdiffuser/antmaze/: antmaze.yaml
configs/adaptdiffuser/antmaze/task/: antmaze-large-diverse-v2.yaml  antmaze-large-play-v2.yaml  antmaze-medium-diverse-v2.yaml  antmaze-medium-play-v2.yaml
configs/diffuser/aloha/: aloha_rnd.yaml
configs/diffuser/aloha/task/: stack.yaml
configs/diffuser/antmaze/: antmaze.yaml  antmaze_adaptdiffuser.yaml  antmaze_rnd.yaml
configs/diffuser/antmaze/task/: antmaze-large-diverse-v2.yaml  antmaze-large-play-v2.yaml  antmaze-medium-diverse-v2.yaml  antmaze-medium-play-v2.yaml
configs/diffuser/mujoco/: mujoco.yaml  mujoco_rnd.yaml
configs/dql/antmaze/: antmaze.yaml
configs/rediffuser/antmaze/: antmaze.yaml
configs/rediffuser/mujoco/: mujoco.yaml
pipelines/: adaptdiffuser_d4rl_antmaze.py  analysis_traj.py  collect_draw_traj.py  collect_ksim_calc.py  collect_test_data.py  diffuser_aloha.py  diffuser_aloha_diffusiontest.py  diffuser_d4rl_antmaze.py  diffuser_d4rl_antmaze_diffusiontest.py  diffuser_d4rl_dataset_test.py  diffuser_d4rl_map_test.py  diffuser_d4rl_mujoco.py  diffuser_d4rl_mujoco_diffusiontest.py  diffuser_rnd_aloha.py  diffuser_rnd_d4rl_antmaze.py  diffuser_rnd_d4rl_antmaze_diffusiontest.py  diffuser_rnd_d4rl_mujoco.py  diffuser_rnd_d4rl_mujoco_diffusiontest.py  dql_d4rl_antmaze.py  rediffuser_d4rl_mujoco.py  rediffuser_minari_antmaze.py
(+8 files in other folders)
